--- a/demo/viz.html
+++ b/demo/viz.html
@@ -21,119 +21,67 @@
   <div id="north">
       <div class="suit">
           <span>&spades;</span>
-          <span class="card">K</span>
-          <span class="card">T</span>
-          <span class="card">7</span>
-          <span class="card">2</span>
       </div>
       <div class="suit">
           <span class="font-red">&hearts;</span>
-          <span class="card">A</span>
-          <span class="card">J</span>
-          <span class="card">T</span>
-          <span class="card">6</span>
-          <span class="card">4</span>
       </div>
       <div class="suit">
           <span class="font-red">&diams;</span>
-          <span class="card">3</span>
       </div>
       <div class="suit">
           <span>&clubs;</span>
-          <span class="card">Q</span>
-          <span class="card">T</span>
-          <span class="card">2</span>
       </div>
   </div>
   <div id="west">
       <div class="suit">
           <span>&spades;</span>
-          <span class="card">A</span>
-          <span class="card">9</span>
-          <span class="card">8</span>
-          <span class="card">6</span>
-          <span class="card">5</span>
       </div>
       <div class="suit">
           <span class="font-red">&hearts;</span>
-          <span class="card">Q</span>
-          <span class="card">9</span>
       </div>
       <div class="suit">
           <span class="font-red">&diams;</span>
-          <span class="card">8</span>
-          <span class="card">7</span>
-          <span class="card">5</span>
-          <span class="card">4</span>
       </div>
       <div class="suit">
           <span>&clubs;</span>
-          <span class="card">K</span>
-          <span class="card">3</span>
       </div>
   </div>
   <div id="east">
       <div class="suit">
           <span>&spades;</span>
-          <span class="card">Q</span>
-          <span class="card">J</span>
-          <span class="card">4</span>
       </div>
       <div class="suit">
           <span class="font-red">&hearts;</span>
-          <span class="card">8</span>
-          <span class="card">3</span>
-          <span class="card">2</span>
       </div>
       <div class="suit">
           <span class="font-red">&diams;</span>
-          <span class="card">A</span>
-          <span class="card">K</span>
-          <span class="card">T</span>
-          <span class="card">9</span>
-          <span class="card">2</span>
       </div>
       <div class="suit">
           <span>&clubs;</span>
-          <span class="card">7</span>
-          <span class="card">4</span>
       </div>
   </div>
   <div id="south">
       <div class="suit">
           <span>&spades;</span>
-          <span class="card">3</span>
       </div>
       <div class="suit">
           <span class="font-red">&hearts;</span>
-          <span class="card">K</span>
-          <span class="card">7</span>
-          <span class="card">5</span>
       </div>
       <div class="suit">
           <span class="font-red">&diams;</span>
-          <span class="card">Q</span>
-          <span class="card">J</span>
-          <span class="card">6</span>
       </div>
       <div class="suit">
           <span>&clubs;</span>
-          <span class="card">A</span>
-          <span class="card">J</span>
-          <span class="card">9</span>
-          <span class="card">8</span>
-          <span class="card">6</span>
-          <span class="card">5</span>
       </div>
   </div>
 
   <div id="auction"></div>
 
   <div id="current-trick">
-  <div id="trick-card-north" class="trick-card"><span>&spades;</span><span>A</span></div>
-  <div id="trick-card-east" class="trick-card"><span>&spades;</span><span>7</span></div>
-  <div id="trick-card-south" class="trick-card"><span>&spades;</span><span>T</span></div>
-  <div id="trick-card-west" class="trick-card highlight"><span class="font-red">&diams;</span><span>Q</span></div>
+  <div id="trick-card-north" class="trick-card"></div>
+  <div id="trick-card-east" class="trick-card"></div>
+  <div id="trick-card-south" class="trick-card"></div>
+  <div id="trick-card-west" class="trick-card"></div>
   </div>
 
 
