--- a/demo/viz.html
+++ b/demo/viz.html
@@ -108,7 +108,7 @@
           let deal = new Deal(log)
           deal.start()
 
-          document.querySelector('#info').innerHTML = '<pre><code>' + JSON.stringify(log['bids'], null, 2) + '</code><pre>'
+          document.querySelector('#info').innerHTML = '<pre><code>' + JSON.stringify(log['bids'], null, 2) + '</code></pre>'
 
           document.getElementById("btn-next").addEventListener("click", function() {
               deal.next()
